backends/drm: match color pipelines already in importScanoutBuffer

If a pipeline can't be matched or is even missing, which is relatively common,
then we can abort preparations for direct scanout earlier and avoid buffer
re-allocations that would just be a waste of time anyways.

BUG: 522075